# project

./: .clangd  .gitignore  CMakeLists.txt  README-en.md
complexities/: CMakeLists.txt  complexity_analyzer.cpp  complexity_analyzer.hpp  list_analyzer.cpp  list_analyzer.hpp  main.cpp
dependencies/: CMakeLists.txt
dependencies/cxxopts/: CMakeLists.txt
dependencies/heap/: CMakeLists.txt
dependencies/stest/: CMakeLists.txt
doc/: Doxyfile  documentation-en.markdown  template.tex
doc/uml/: memory-managers.puml
ds/: Accident.h  CMakeLists.txt  UniversalAlgorithm.h  main.cpp
libds/: CMakeLists.txt  constants.hpp  utils.hpp
libds.tests/: CMakeLists.txt  main.cpp
libds.tests/adt/: adt.test.hpp  array.test.hpp  list.test.hpp  priority_queue.test.hpp  queue.test.hpp  sorts.test.hpp  stack.test.hpp  table.test.hpp
libds.tests/amt/: explicit_sequence.test.cpp  explicit_sequence.test.hpp  implicit_sequence.test.cpp  implicit_sequence.test.hpp  sequence.test.hpp
libds.tests/mm/: compact_memory_object_manager.test.cpp  compact_memory_object_manager.test.hpp  compact_memory_trivial_manager.test.cpp  compact_memory_trivial_manager.test.hpp  system_memory_manager.test.cpp  system_memory_manager.test.hpp
libds.tests/other/: utils.cpp  utils.hpp
libds/amt/: abstract_memory_type.hpp  explicit_sequence.hpp  implicit_sequence.hpp  sequence.hpp
libds/mm/: compact_memory_manager.hpp  compact_memory_object_manager.hpp  compact_memory_trivial_manager.hpp  compact_operation_memory_manager.hpp  memory_manager.hpp  memory_omanip.hpp  system_memory_manager.hpp
(+20 files in other folders)
